update commented image-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,16 @@ services:
   #   environment:
   #     - MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/${MONGO_INITDB_DATABASE}
   #   ports: 
-  #     - 9000:3000
+  #     - 9000:3000 # [outside]:inside
   #   links: 
-  #     - mongodb
+  #     - mongodb # database
   #   volumes: 
-  #     - ./image-uploading:/app
+  #     - ./image-uploading/uploads:/app/uploads
+  #     - images_modules:/app/node_modules
   #   networks:
   #     - local
   #   depends_on: 
-  #     - mongodb
+  #     - mongodb # database
 
   mongodb:
     image: mongo:4.2.3-bionic
@@ -33,6 +34,9 @@ services:
       - ./mongo/mongoconfig:/data/configdb
     networks:
       - local
+
+# volumes:
+#   images_modules:
 
 networks:
   local:
